--- a/packages/alarm/skill_device/battery_status_alarm.yaml
+++ b/packages/alarm/skill_device/battery_status_alarm.yaml
@@ -1,3 +1,6 @@
+#################################################################
+#               NON OCCORRONO PERSONALIZZAZIONI                 #
+#################################################################
 automation:
   - id: battery_low
     alias: Batteria scarica dispositivi allarme
