--- a/packages/alarm/skill_device/control_code/general_code.yaml
+++ b/packages/alarm/skill_device/control_code/general_code.yaml
@@ -1,3 +1,6 @@
+#################################################################
+#               NON OCCORRONO PERSONALIZZAZIONI                 #
+#################################################################
 template:
   - sensor:
       - name: emergency_code
