--- a/packages/alarm/skill_device/control_code/whit_card.yaml
+++ b/packages/alarm/skill_device/control_code/whit_card.yaml
@@ -1,6 +1,7 @@
-#################################################
-# ATTENZIONE: file funzionante solo con la card #
-#################################################
+#################################################################
+#               NON OCCORRONO PERSONALIZZAZIONI                 #
+# ATTENZIONE: file funzionante solo con la card                 #
+#################################################################
 
 input_number:
   control_code_alarm:
