--- a/packages/alarm/skill_device/detached/detached_shelly.yaml
+++ b/packages/alarm/skill_device/detached/detached_shelly.yaml
@@ -1,3 +1,6 @@
+#################################################################
+#               NON OCCORRONO PERSONALIZZAZIONI                 #
+#################################################################
 rest_command:
   detached_shelly:
     url: "{{ urls | default(none) }}"
