--- a/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
+++ b/packages/alarm/skill_device/notify_alarm/notify_media_player.yaml
@@ -6,6 +6,7 @@ homeassistant:
 automation:
   - alias: notify_alarm_media_player
     id: notify_alarm_media_player
+    mode: restart
     variables:
       my_external_domain: *my_external_domain
       volume: 0.5
