--- a/packages/alarm/skill_device/campanello_alarm.yaml
+++ b/packages/alarm/skill_device/campanello_alarm.yaml
@@ -16,20 +16,10 @@ automation:
         {{ (state_alarm() | from_json) ['alarm']}}
     trigger:
       - platform: template
-        value_template: >
+        value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
-          {{ is_state(alarm, 'pending') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
-      - platform: template
-        value_template: >
-          {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
-          {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
-      - platform: template
-        value_template: >
-          {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
-          {{ is_state(alarm, 'disarmed') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+          {% set alarm_state = states[(state_alarm() | from_json)['alarm']] %}
+          {{ (alarm_state.state in ['disarmed', 'triggered', 'pending']) and (now() < alarm_state.last_changed + timedelta(seconds=1)) }}
     action:
       - choose:
           - alias: Primo avviso sensore scattato
