--- a/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
+++ b/packages/alarm/skill_device/control_code/tastierino estero/keypad.yaml
@@ -9,8 +9,18 @@ template:
       - platform: template
         value_template: >-
           {% from 'alarm.jinja' import state_alarm %}
-          {% set alarm_state = states[(state_alarm() | from_json)['alarm']] %}
-          {{ (alarm_state.state in ['arming', 'triggered', 'pending']) and (now() < alarm_state.last_changed + timedelta(seconds=1)) }}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'arming') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+      - platform: template
+        value_template: >-
+          {% from 'alarm.jinja' import state_alarm %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'triggered') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
+      - platform: template
+        value_template: >-
+          {% from 'alarm.jinja' import state_alarm %}
+          {% set alarm = (state_alarm() | from_json) ['alarm'] %}
+          {{ is_state(alarm, 'pending') and now() < states[alarm].last_changed + timedelta(seconds=1) }}
       - platform: state
         entity_id: button.confirmed_code_alarm_keypad
     sensor:
