--- a/packages/alarm/skill_device/nfc_alarm.yaml
+++ b/packages/alarm/skill_device/nfc_alarm.yaml
@@ -10,8 +10,8 @@ homeassistant:
 ##############################################################
 
 automation:
-  - alias: Tag NFC alarm
-    id: tag_nfc_alarm
+  - alias: "Allarme: Tag NFC alarm"
+    id: allarme_tag_nfc_alarm
     trigger:
       - platform: event
         event_type: tag_scanned
