--- a/packages/alarm/alarm_control_panel/general_alarm.yaml
+++ b/packages/alarm/alarm_control_panel/general_alarm.yaml
@@ -188,24 +188,51 @@ template:
         event_type: customizations
         event_data:
           notify: presence_simulation_mobile
+      - platform: template
+        value_template: >-
+          {% set code_card = 'sensor.counter_code_error'  %}
+          {{ states(code_card) != 'unknown' and not is_state(code_card,'0') and not is_state('sensor.stato_allarme','Disattivato') and now() < states[code_card].last_changed + timedelta(seconds=2) }}
+        for:
+          seconds: 1
+        id: control_code
+      - platform: template
+        value_template: >-
+          {% set code_card = 'sensor.counter_code_error_keypad' %}
+          {{ states(code_card) != 'unknown' and not is_state(code_card,'0') and not is_state('sensor.stato_allarme','Disattivato') and now() < states[code_card].last_changed + timedelta(seconds=2) }}
+        for:
+          seconds: 1
+        id: control_code
     sensor:
       - name: History alarm
         state: >-
+          {# SENSORE SCATTATO #}
           {% if trigger.event is defined and (trigger.event.data.notify == 'allarme_notte_sensore_rilevato' or trigger.event.data.notify == 'allarme_globale_sensore_rilevato' or trigger.event.data.notify == 'presence_simulation_mobile' ) %}
-              {{ trigger.event.data.message |replace('Attenzione allarme in attivaziona da','') }}
+              {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.event.data.message |replace('Attenzione allarme in attivaziona da','') }}
+          {# STATO ALLARME #}
           {% elif trigger is defined and trigger.entity_id == 'sensor.stato_allarme' %}
             {% set persons = states.person | selectattr('attributes.user_id', 'eq', trigger.to_state.context.user_id) | list %} 
             {% set parents = states.automation | selectattr('context.parent_id', 'eq', trigger.to_state.context.parent_id) | list %} 
-            {% if persons | count == 1 %}
-               {{ as_local(now()).strftime("%H:%M -> ") + trigger.to_state.state + ' da: ' + persons[0].attributes.friendly_name }}           
-            {% elif parents | count > 0 %}
-                {% for parents in parents if "Allarme: " in parents.attributes.friendly_name %}
-                  {{ as_local(now()).strftime("%H:%M -> ") + trigger.to_state.state + ' da: ' + parents.attributes.friendly_name | replace('Allarme: ','')}}
+                {% if persons | count == 1 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
+                    {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + persons[0].attributes.friendly_name }}           
+                {% elif parents | count > 0 and (trigger.to_state.state == 'In Attivazione' or trigger.to_state.state ==  'Disattivato') %}
+                    {% for parents in parents if "Allarme: " in parents.attributes.friendly_name %}
+                        {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state + ' da: ' + parents.attributes.friendly_name | replace('Allarme: ','')}}
                     {% break %} 
-                {% endfor %}
-            {% else %}
-              {{ as_local(now()).strftime("%H:%M -> ") + trigger.to_state.state }}
-            {% endif %}
+                    {% endfor %}
+                {% else %}
+                    {{ as_local(now()).strftime("%d/%m %H:%M -> ") + trigger.to_state.state }}
+                {% endif %}
+          {# CONTROLLO TENTATIVI CODICE #}
+          {% elif trigger.id == 'control_code' %}
+            {% set code_card = 'sensor.counter_code_error'%}
+            {% set code_keypad = 'sensor.counter_code_error_keypad' %}
+                {% if states(code_card) != 'unknown' and not is_state(code_card,'0') %}
+                  {{ as_local(now()).strftime("%d/%m %H:%M -> ") + 'Tentativo n.' + states(code_card) + ' codice errato' }}
+                {% elif states(code_keypad) != 'unknown' and not is_state(code_keypad,'0') %}
+                  {{ as_local(now()).strftime("%d/%m %H:%M -> ") + 'Tentativo n.' + states(code_keypad) + ' codice keypad errato' }}
+                {% else %}
+                Errore codice
+                {% endif %}
           {% else %}
             Errore
           {% endif %}
